--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Install tcli
         run: dotnet tool install --global tcli
       - name: Run tcli
-        run: tcli publish --token ${{ secrets.THUNDERSTORE_KEY }} --package-version ${RELEASE_TAG:1}
+        run: tcli publish --token ${{ secrets.THUNDERSTORE_KEY }} --package-version ${RELEASE_TAG}
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4
         with:
