--- a/thunderstore.toml
+++ b/thunderstore.toml
@@ -10,7 +10,7 @@ websiteUrl = "https://github.com/caioreix/CoffinSleep"
 containsNsfwContent = false
 
 [package.dependencies]
-BepInEx-BepInExPack_V_Rising = "1.668.5"
+BepInEx-BepInExPack_V_Rising = "1.733.2"
 
 [build]
 icon = "./icon.png"
@@ -24,4 +24,6 @@ target = ""
 [publish]
 repository = "https://thunderstore.io"
 communities = ["v-rising"]
-categories = []
+
+[publish.categories]
+v-rising = ["oakveil-update", "mods", "server"]
